<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Text for name of app [CHAR LIMIT=20] -->
    <string name="app_name">Just Java</string>
    <!-- Text for accessibility of image [CHAR LIMIT=NONE] -->
    <string name="image">Steaming coffee in a cup</string>
    <!-- Header text for quantity display [CHAR LIMIT=20] -->
    <string name="quan">Quantity</string>
    <string name="add" translatable="false">+</string>
    <string name="quan_display" translatable="false">0</string>
    <string name="sub" translatable="false">-</string>
    <!-- Button text for order button [CHAR LIMIT=20] -->
    <string name="order">Order</string>
    <!-- Header text for list of toppings [CHAR LIMIT=20] -->
    <string name="topping">Toppings</string>
    <!-- Checkbox text for adding whipped cream [CHAR LIMIT=20] -->
    <string name="whip_top">Whipped Cream</string>
    <!-- Checkbox text for adding chocolate [CHAR LIMIT=20] -->
    <string name="choc_top">Chocolate</string>
    <!-- EditText hint text for adding name [CHAR LIMIT=20] -->
    <string name="input">Name</string>
    <!-- Summary text for name in order summary. Shown in format "Name: Lin" where Lin is the users name from input [CHAR LIMIT=20] -->
    <string name="summ_name">Name: <xliff:g id="name_input" example="Lin">%s</xliff:g></string>
    <!-- Whipped cream topping for the order summary. Shown in format of "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE] -->
    <string name="summ_whip">Add whipped cream? <xliff:g id="hasWhippedCream" example="true">%b</xliff:g></string>
    <!-- Chocolate topping for the order summary. Shown in the format of "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE] -->
    <string name="summ_choc">Add chocolate? <xliff:g id="hasChocolate" example="true">%b</xliff:g></string>
    <!-- Summary text for quantity. Shown in format "Quantity: 3" where three is the selected quantity [CHAR LIMIT=20] -->
    <string name="summ_quan">Quantity: <xliff:g id="quanInt" example="3">%d</xliff:g></string>
    <!-- Summary text for total. Shown in format "Total: $15" where $15 is the calculated total[CHAR LIMIT=20] -->
    <string name="summ_total">Total: <xliff:g id="totInt" example="$15">%s</xliff:g></string>
    <!-- Subject line for the order summary email. [CHAR LIMIT=NONE] -->
    <string name="order_summary_email_subject">Just Java Coffee Order for </string>
    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="summ_thanks">Thank You!</string>
    <string name="summOrderPlaced">" Your order has been created!"</string>
    <string name="toastUpper">You cannot order more than 100 cups of coffee</string>
    <string name="toastLower">You cannot order less than 1 cup of coffee</string>
</resources>
