<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad"
        android:text="@string/quan"
        android:textAllCaps="true"
        android:textSize="@dimen/text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="@dimen/but_size"
            android:layout_height="@dimen/but_size"
            android:layout_margin="@dimen/pad"
            android:onClick="decrement"
            android:text="@string/sub" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad"
            android:text="@string/quan_display"
            android:textColor="@color/black"
            android:textSize="@dimen/text" />

        <Button
            android:id="@+id/increment_button"
            android:layout_width="@dimen/but_size"
            android:layout_height="@dimen/but_size"
            android:layout_margin="@dimen/pad"
            android:onClick="increment"
            android:text="@string/add" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad"
        android:text="@string/price"
        android:textAllCaps="true"
        android:textSize="@dimen/text" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad"
        android:text="@string/price_display"
        android:textColor="@color/black"
        android:textSize="@dimen/text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad"
        android:onClick="submitOrder"
        android:text="@string/order" />

</LinearLayout>